# light-chain

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
examples/hello_world/: hello_world.py
examples/mail_classifier/: mail_classifier.py
examples/mail_classifier/prompts/: prompt_template.txt  solution_matrix.yaml  system.txt
examples/movie_trivia_autogpt/: movie_trivia_autogpt.py
examples/movie_trivia_autogpt/_utils/: functions_.py  python_repl.py  wiki_search.py
examples/movie_trivia_autogpt/prompts/: prompt_template.prompt  system.prompt  trigger.prompt
src/light_chain/llm/: __init__.py  autogpt.py  base_model.py  llm_tool.py  messages.py
src/litchain/llm/: __init__.py  _utils.py  autogpt.py  base_model.py  base_model_gemini.py  get_secrets.py  llm_tool.py  llm_variable.py  messages.py
tests/: test_light_chain.py
