[aliases]
test = pytest

[metadata]
name = light-chain
version = 0.0.1
author = iuiu
author_email = ds-oss@iuiu.com
license = COPYRIGHT
description = light-chain
keywords = ds-light-chain
url = tbd
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = llm

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts = light_chain_get_e=llm.light_chain.get_:main

